PR26452, ASAN: som_compute_checksum som.c:4293

PR 26452
	* som.c (som_compute_checksum): XOR 32-bit words in header,
	not unsigned long sized words.